# erpnext_cis_plus

./: README.md  pyproject.toml
erpnext_cis_plus/: hooks.py  modules.txt
erpnext_cis_plus/erpnext_cis_plus/custom/: address.json  customer.json
erpnext_cis_plus/erpnext_cis_plus/hooks/: address.py  customer.py
erpnext_cis_plus/public/js/: customer.js  customer_list.js
erpnext_customer_plus/: hooks.py
