[project]
name = "erpnext_cis_plus"
authors = [
    { name = "Avunu LLC", email = "mail@avu.nu"}
]
description = "Various enhancements to the customer, contact, and address management for ERPNext."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "nominatim"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
